--- a/express_app/package.json
+++ b/express_app/package.json
@@ -1,7 +1,15 @@
 {
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.6.1",
+    "jest": "^29.6.1"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
